change getFirst to get method .